Fixup: Fix live editing

4ceb67df8cd is cherry-pick 77->69 of f720be4 CVE-2020-6391,
unfortunately it breaks styled markup traverse by accidentally
inverting condition.

Fixes: QTBUG-85160
Change-Id: I732733cdac7970a495cdc88a729e7fec459a08da
Reviewed-by: Michael Brüning <michael.bruning@qt.io>